--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: https://wyf9.top/
 languageCode: zh-cn
 title: wyf9s Blog
-theme: PaperMod
+theme: ananke
 defaultContentLanguage: zh
 copyright: Copyright wyf9. All Rights Reserved. 
 disablePathToLower: true
